Move to the most recent Jepsen version: 0.1.16-SNAPSHOT (master)